--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.1",
     "@fontsource/cabin": "^5.1.0",
     "astro": "^4.15.10",
+    "date-fns": "^4.1.0",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   }
