--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fontsource/cabin": "^5.1.0",
     "astro": "^4.15.10",
     "date-fns": "^4.1.0",
+    "markdown-it": "^14.1.0",
+    "sanitize-html": "^2.13.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   },
