chore: update for more abs paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,11 @@
 
     "baseUrl": ".",
     "paths": {
+      "@assets/*": ["src/assets/*"],
       "@components/*": ["src/components/*"],
       "@layouts/*": ["src/layouts/*"],
-      "@content/*": ["src/content/*"]
+      "@content/*": ["src/content/*"],
+      "@utils/*": ["src/utils/*"]
     }
   }
 }
